added more operations to the notebook file

--- a/Numpy Practice.ipynb
+++ b/Numpy Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e82ce67",
+   "id": "a96ebb72",
    "metadata": {},
    "source": [
     "ALL ABOUT NUMPY BASIC OPERATIONS"
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54d6d17c",
+   "id": "dd0b36de",
    "metadata": {},
    "source": [
     "We can assign values to individual elements of an array. See the code below. "
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb1273d4",
+   "id": "bab15cca",
    "metadata": {},
    "source": [
     "We want to now set entire rows of an array to a list"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "35d7fbb8",
+   "id": "0240b916",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7781d6d9",
+   "id": "0cb53b24",
    "metadata": {},
    "source": [
     "What if we want to set all values of the array equall to a single number? Let's see"
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f88897e0",
+   "id": "863c078c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,35 +947,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "09a63aab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "another_list"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15f0cdf8",
+   "cell_type": "markdown",
+   "id": "10258f83",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Adding a value to a 1D array"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "faa4333f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 6, 6, 6])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "another_list+5"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17aa01dd",
+   "cell_type": "markdown",
+   "id": "0750e541",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "How about if we add 5 to a 2D array? what will happen?"
+   ]
   },
   {
    "cell_type": "code",
@@ -983,7 +1009,9 @@
    "id": "a50bc8a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "array_z"
+   ]
   },
   {
    "cell_type": "code",
