added more operations

--- a/Numpy Practice.ipynb
+++ b/Numpy Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a96ebb72",
+   "id": "d6de5b43",
    "metadata": {},
    "source": [
     "ALL ABOUT NUMPY BASIC OPERATIONS"
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd0b36de",
+   "id": "0d83b72b",
    "metadata": {},
    "source": [
     "We can assign values to individual elements of an array. See the code below. "
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab15cca",
+   "id": "9730461d",
    "metadata": {},
    "source": [
     "We want to now set entire rows of an array to a list"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0240b916",
+   "id": "5fb02c3e",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cb53b24",
+   "id": "048355fe",
    "metadata": {},
    "source": [
     "What if we want to set all values of the array equall to a single number? Let's see"
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "863c078c",
+   "id": "23cfa280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10258f83",
+   "id": "3f70731f",
    "metadata": {},
    "source": [
     "Adding a value to a 1D array"
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0750e541",
+   "id": "1230f718",
    "metadata": {},
    "source": [
     "How about if we add 5 to a 2D array? what will happen?"
@@ -1005,53 +1005,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "a50bc8a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 6, 6, 6],\n",
+       "       [6, 6, 6, 6],\n",
+       "       [6, 6, 6, 6]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "array_z"
+    "array_z+5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8dbfc5",
+   "metadata": {},
+   "source": [
+    "It works that way as well. In fact, we can compute all kinds of mathematical operations of arrays, operations like the addition we just did, subtraction, multiplication and division"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b67d365",
+   "metadata": {},
+   "source": [
+    "But there is more we can do with arrays. We can add one dimensional arrays to two dimensional arrays\n",
+    "as shown below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b412c1ef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9e3eae9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "dbad7a1c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "array_b=([7,5,6,7])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "9c86d521",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "array_c=np.array([[2,3,4,5],[5,6,7,78],[3,4,7,5]])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2cd03152",
+   "execution_count": 70,
+   "id": "157c0c94",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9,  8, 10, 12],\n",
+       "       [12, 11, 13, 85],\n",
+       "       [10,  9, 13, 12]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_b+array_c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f91612ad",
+   "metadata": {},
+   "source": [
+    "What happened in the above code was that,each element of array_b was added to the corrresponding \n"
+   ]
   },
   {
    "cell_type": "code",
