added more numpy operations

--- a/Numpy Practice.ipynb
+++ b/Numpy Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6de5b43",
+   "id": "79670d7c",
    "metadata": {},
    "source": [
     "ALL ABOUT NUMPY BASIC OPERATIONS"
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d83b72b",
+   "id": "60be389e",
    "metadata": {},
    "source": [
     "We can assign values to individual elements of an array. See the code below. "
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9730461d",
+   "id": "78e41b93",
    "metadata": {},
    "source": [
     "We want to now set entire rows of an array to a list"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "5fb02c3e",
+   "id": "0c492b71",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "048355fe",
+   "id": "b0d51965",
    "metadata": {},
    "source": [
     "What if we want to set all values of the array equall to a single number? Let's see"
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "23cfa280",
+   "id": "59aac4c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f70731f",
+   "id": "6279610a",
    "metadata": {},
    "source": [
     "Adding a value to a 1D array"
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1230f718",
+   "id": "5d341177",
    "metadata": {},
    "source": [
     "How about if we add 5 to a 2D array? what will happen?"
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d8dbfc5",
+   "id": "0ad2ccab",
    "metadata": {},
    "source": [
     "It works that way as well. In fact, we can compute all kinds of mathematical operations of arrays, operations like the addition we just did, subtraction, multiplication and division"
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b67d365",
+   "id": "98e267ef",
    "metadata": {},
    "source": [
     "But there is more we can do with arrays. We can add one dimensional arrays to two dimensional arrays\n",
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "157c0c94",
+   "id": "6a1aef7a",
    "metadata": {},
    "outputs": [
     {
@@ -1088,10 +1088,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f91612ad",
+   "id": "fe2df473",
    "metadata": {},
    "source": [
-    "What happened in the above code was that,each element of array_b was added to the corrresponding \n"
+    "What happened in the above code was that,each element of array_b was added to the corrresponding \n",
+    "element in each row of array_c"
    ]
   },
   {
