--- a/Generating data with numpy.ipynb
+++ b/Generating data with numpy.ipynb
@@ -31,8 +31,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.05118288e-153, 2.85168689e-109, 7.67582751e+170],\n",
-       "       [1.05161522e-153, 9.54899498e-259, 7.04142211e-009]])"
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
       ]
      },
      "execution_count": 2,
@@ -62,16 +62,46 @@
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+       "array([[1.13352043e-153, 7.34728222e+228, 2.15779010e+185,\n",
+       "        1.27617599e-152, 1.17549387e+214, 7.72482858e+228,\n",
+       "        6.01346953e-154, 1.57430847e+161, 4.65541789e-072,\n",
+       "        5.98129759e-154],\n",
+       "       [1.06758000e+224, 4.46811730e-091, 5.98149672e-154,\n",
+       "        3.43515227e+228, 6.01347002e-154, 2.28896090e+243,\n",
+       "        1.28037489e-152, 2.34783525e+251, 4.83245960e+276,\n",
+       "        1.71963045e+238],\n",
+       "       [1.49005471e+195, 5.70727135e+188, 6.01334657e-154,\n",
+       "        2.11776372e+214, 1.05893702e-153, 7.13144174e+252,\n",
+       "        3.45060540e-085, 1.49003466e+195, 4.83245960e+276,\n",
+       "        7.33956123e+223],\n",
+       "       [2.31589513e+251, 6.01346953e-154, 9.92152605e+247,\n",
+       "        4.91347540e+252, 2.66062477e-260, 1.27661731e-152,\n",
+       "        6.01334659e-154, 4.47593816e-091, 1.15305479e+214,\n",
+       "        2.46818315e-154],\n",
+       "       [9.10016855e+276, 1.09854920e+248, 1.27734658e-152,\n",
+       "        3.98220482e+209, 8.58149566e+170, 2.66061857e-260,\n",
+       "        5.29965388e+180, 4.46811730e-091, 6.01346953e-154,\n",
+       "        8.70860497e+183],\n",
+       "       [1.69376034e+190, 4.82406565e+228, 3.68205013e+180,\n",
+       "        8.90264987e+247, 1.05894728e-153, 1.16988754e+214,\n",
+       "        9.78313099e-153, 2.52760136e-258, 5.56206154e+180,\n",
+       "        6.01346953e-154],\n",
+       "       [4.26957803e+257, 2.51230311e-091, 9.99223152e-014,\n",
+       "        3.05004779e+156, 2.11784822e+214, 7.34728221e+228,\n",
+       "        1.97101388e+156, 6.01346953e-154, 1.75486650e+097,\n",
+       "        7.20530990e+159],\n",
+       "       [3.81187276e+180, 1.09944918e+155, 1.09892467e+155,\n",
+       "        1.32883994e+179, 1.97632844e+166, 2.04571143e-258,\n",
+       "        5.81236386e+180, 2.58633920e+161, 2.42766858e-154,\n",
+       "        3.64913061e+233],\n",
+       "       [6.01346954e-154, 4.47593816e-091, 7.04142211e-009,\n",
+       "        5.28595592e-085, 4.83245960e+276, 1.05118800e-153,\n",
+       "        7.46502763e-067, 6.09215496e+247, 7.54951879e-096,\n",
+       "        6.01334504e-154],\n",
+       "       [2.45933175e-154, 3.55959779e+180, 1.03063392e-113,\n",
+       "        1.49892842e-076, 1.39804329e-076, 5.20165019e-090,\n",
+       "        5.46379155e-095, 6.01347002e-154, 6.01347002e-154,\n",
+       "        3.26284768e+131]])"
       ]
      },
      "execution_count": 3,
@@ -147,16 +177,46 @@
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+       "array([[1.13352043e-153, 7.34728222e+228, 2.15779010e+185,\n",
+       "        1.27617599e-152, 1.17549387e+214, 7.72482858e+228,\n",
+       "        6.01346953e-154, 1.57430847e+161, 4.65541789e-072,\n",
+       "        5.98129759e-154],\n",
+       "       [1.06758000e+224, 4.46811730e-091, 5.98149672e-154,\n",
+       "        3.43515227e+228, 6.01347002e-154, 2.28896090e+243,\n",
+       "        1.28037489e-152, 2.34783525e+251, 4.83245960e+276,\n",
+       "        1.71963045e+238],\n",
+       "       [1.49005471e+195, 5.70727135e+188, 6.01334657e-154,\n",
+       "        2.11776372e+214, 1.05893702e-153, 7.13144174e+252,\n",
+       "        3.45060540e-085, 1.49003466e+195, 4.83245960e+276,\n",
+       "        7.33956123e+223],\n",
+       "       [2.31589513e+251, 6.01346953e-154, 9.92152605e+247,\n",
+       "        4.91347540e+252, 2.66062477e-260, 1.27661731e-152,\n",
+       "        6.01334659e-154, 4.47593816e-091, 1.15305479e+214,\n",
+       "        2.46818315e-154],\n",
+       "       [9.10016855e+276, 1.09854920e+248, 1.27734658e-152,\n",
+       "        3.98220482e+209, 8.58149566e+170, 2.66061857e-260,\n",
+       "        5.29965388e+180, 4.46811730e-091, 6.01346953e-154,\n",
+       "        8.70860497e+183],\n",
+       "       [1.69376034e+190, 4.82406565e+228, 3.68205013e+180,\n",
+       "        8.90264987e+247, 1.05894728e-153, 1.16988754e+214,\n",
+       "        9.78313099e-153, 2.52760136e-258, 5.56206154e+180,\n",
+       "        6.01346953e-154],\n",
+       "       [4.26957803e+257, 2.51230311e-091, 9.99223152e-014,\n",
+       "        3.05004779e+156, 2.11784822e+214, 7.34728221e+228,\n",
+       "        1.97101388e+156, 6.01346953e-154, 1.75486650e+097,\n",
+       "        7.20530990e+159],\n",
+       "       [3.81187276e+180, 1.09944918e+155, 1.09892467e+155,\n",
+       "        1.32883994e+179, 1.97632844e+166, 2.04571143e-258,\n",
+       "        5.81236386e+180, 2.58633920e+161, 2.42766858e-154,\n",
+       "        3.64913061e+233],\n",
+       "       [6.01346954e-154, 4.47593816e-091, 7.04142211e-009,\n",
+       "        5.28595592e-085, 4.83245960e+276, 1.05118800e-153,\n",
+       "        7.46502763e-067, 6.09215496e+247, 7.54951879e-096,\n",
+       "        6.01334504e-154],\n",
+       "       [2.45933175e-154, 3.55959779e+180, 1.03063392e-113,\n",
+       "        1.49892842e-076, 1.39804329e-076, 5.20165019e-090,\n",
+       "        5.46379155e-095, 6.01347002e-154, 6.01347002e-154,\n",
+       "        3.26284768e+131]])"
       ]
      },
      "execution_count": 6,
@@ -274,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +345,7 @@
        "       [6, 7, 8, 9, 8]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,18 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  0,   0,   0,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0],\n",
-       "       [500,   0,   0,   0,   0]])"
+       "array([[      0,       0,       0,       0,       0],\n",
+       "       [      0,       0,       0,       0,       0],\n",
+       "       [   1468,       0,       0, 3342433,       0]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,12 +380,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " array_zeros_like=np.zeros_like(matrix_A)\n",
+    "array_zeros_like"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -335,18 +439,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The np.arange function is used to generate a sequence of consecutive numbers"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  4,  7, 10, 13, 16, 19, 22, 25, 28])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_rng=np.arange(1,30,3)\n",
+    "array_rng"
+   ]
   },
   {
    "cell_type": "code",
@@ -401,10 +519,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from numpy.random import Generator as gen\n",
+    "from numpy.random import PCG64 as pcg\n",
+    "\n",
+    "#in actual sense , their full names are np.random.Generator and numpy.random"
+   ]
   },
   {
    "cell_type": "code",
