added some more code on random generators

--- a/Generating data with numpy.ipynb
+++ b/Generating data with numpy.ipynb
@@ -62,46 +62,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.13352043e-153, 7.34728222e+228, 2.15779010e+185,\n",
-       "        1.27617599e-152, 1.17549387e+214, 7.72482858e+228,\n",
-       "        6.01346953e-154, 1.57430847e+161, 4.65541789e-072,\n",
-       "        5.98129759e-154],\n",
-       "       [1.06758000e+224, 4.46811730e-091, 5.98149672e-154,\n",
-       "        3.43515227e+228, 6.01347002e-154, 2.28896090e+243,\n",
-       "        1.28037489e-152, 2.34783525e+251, 4.83245960e+276,\n",
-       "        1.71963045e+238],\n",
-       "       [1.49005471e+195, 5.70727135e+188, 6.01334657e-154,\n",
-       "        2.11776372e+214, 1.05893702e-153, 7.13144174e+252,\n",
-       "        3.45060540e-085, 1.49003466e+195, 4.83245960e+276,\n",
-       "        7.33956123e+223],\n",
-       "       [2.31589513e+251, 6.01346953e-154, 9.92152605e+247,\n",
-       "        4.91347540e+252, 2.66062477e-260, 1.27661731e-152,\n",
-       "        6.01334659e-154, 4.47593816e-091, 1.15305479e+214,\n",
-       "        2.46818315e-154],\n",
-       "       [9.10016855e+276, 1.09854920e+248, 1.27734658e-152,\n",
-       "        3.98220482e+209, 8.58149566e+170, 2.66061857e-260,\n",
-       "        5.29965388e+180, 4.46811730e-091, 6.01346953e-154,\n",
-       "        8.70860497e+183],\n",
-       "       [1.69376034e+190, 4.82406565e+228, 3.68205013e+180,\n",
-       "        8.90264987e+247, 1.05894728e-153, 1.16988754e+214,\n",
-       "        9.78313099e-153, 2.52760136e-258, 5.56206154e+180,\n",
-       "        6.01346953e-154],\n",
-       "       [4.26957803e+257, 2.51230311e-091, 9.99223152e-014,\n",
-       "        3.05004779e+156, 2.11784822e+214, 7.34728221e+228,\n",
-       "        1.97101388e+156, 6.01346953e-154, 1.75486650e+097,\n",
-       "        7.20530990e+159],\n",
-       "       [3.81187276e+180, 1.09944918e+155, 1.09892467e+155,\n",
-       "        1.32883994e+179, 1.97632844e+166, 2.04571143e-258,\n",
-       "        5.81236386e+180, 2.58633920e+161, 2.42766858e-154,\n",
-       "        3.64913061e+233],\n",
-       "       [6.01346954e-154, 4.47593816e-091, 7.04142211e-009,\n",
-       "        5.28595592e-085, 4.83245960e+276, 1.05118800e-153,\n",
-       "        7.46502763e-067, 6.09215496e+247, 7.54951879e-096,\n",
-       "        6.01334504e-154],\n",
-       "       [2.45933175e-154, 3.55959779e+180, 1.03063392e-113,\n",
-       "        1.49892842e-076, 1.39804329e-076, 5.20165019e-090,\n",
-       "        5.46379155e-095, 6.01347002e-154, 6.01347002e-154,\n",
-       "        3.26284768e+131]])"
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
      "execution_count": 3,
@@ -177,46 +147,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.13352043e-153, 7.34728222e+228, 2.15779010e+185,\n",
-       "        1.27617599e-152, 1.17549387e+214, 7.72482858e+228,\n",
-       "        6.01346953e-154, 1.57430847e+161, 4.65541789e-072,\n",
-       "        5.98129759e-154],\n",
-       "       [1.06758000e+224, 4.46811730e-091, 5.98149672e-154,\n",
-       "        3.43515227e+228, 6.01347002e-154, 2.28896090e+243,\n",
-       "        1.28037489e-152, 2.34783525e+251, 4.83245960e+276,\n",
-       "        1.71963045e+238],\n",
-       "       [1.49005471e+195, 5.70727135e+188, 6.01334657e-154,\n",
-       "        2.11776372e+214, 1.05893702e-153, 7.13144174e+252,\n",
-       "        3.45060540e-085, 1.49003466e+195, 4.83245960e+276,\n",
-       "        7.33956123e+223],\n",
-       "       [2.31589513e+251, 6.01346953e-154, 9.92152605e+247,\n",
-       "        4.91347540e+252, 2.66062477e-260, 1.27661731e-152,\n",
-       "        6.01334659e-154, 4.47593816e-091, 1.15305479e+214,\n",
-       "        2.46818315e-154],\n",
-       "       [9.10016855e+276, 1.09854920e+248, 1.27734658e-152,\n",
-       "        3.98220482e+209, 8.58149566e+170, 2.66061857e-260,\n",
-       "        5.29965388e+180, 4.46811730e-091, 6.01346953e-154,\n",
-       "        8.70860497e+183],\n",
-       "       [1.69376034e+190, 4.82406565e+228, 3.68205013e+180,\n",
-       "        8.90264987e+247, 1.05894728e-153, 1.16988754e+214,\n",
-       "        9.78313099e-153, 2.52760136e-258, 5.56206154e+180,\n",
-       "        6.01346953e-154],\n",
-       "       [4.26957803e+257, 2.51230311e-091, 9.99223152e-014,\n",
-       "        3.05004779e+156, 2.11784822e+214, 7.34728221e+228,\n",
-       "        1.97101388e+156, 6.01346953e-154, 1.75486650e+097,\n",
-       "        7.20530990e+159],\n",
-       "       [3.81187276e+180, 1.09944918e+155, 1.09892467e+155,\n",
-       "        1.32883994e+179, 1.97632844e+166, 2.04571143e-258,\n",
-       "        5.81236386e+180, 2.58633920e+161, 2.42766858e-154,\n",
-       "        3.64913061e+233],\n",
-       "       [6.01346954e-154, 4.47593816e-091, 7.04142211e-009,\n",
-       "        5.28595592e-085, 4.83245960e+276, 1.05118800e-153,\n",
-       "        7.46502763e-067, 6.09215496e+247, 7.54951879e-096,\n",
-       "        6.01334504e-154],\n",
-       "       [2.45933175e-154, 3.55959779e+180, 1.03063392e-113,\n",
-       "        1.49892842e-076, 1.39804329e-076, 5.20165019e-090,\n",
-       "        5.46379155e-095, 6.01347002e-154, 6.01347002e-154,\n",
-       "        3.26284768e+131]])"
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
      "execution_count": 6,
@@ -365,7 +305,7 @@
       "text/plain": [
        "array([[      0,       0,       0,       0,       0],\n",
        "       [      0,       0,       0,       0,       0],\n",
-       "       [   1468,       0,       0, 3342433,       0]])"
+       "       [   1436,       0,       0, 3342433,       0]])"
       ]
      },
      "execution_count": 11,
@@ -447,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +396,7 @@
        "array([ 1,  4,  7, 10, 13, 16, 19, 22, 25, 28])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +466,84 @@
     "from numpy.random import Generator as gen\n",
     "from numpy.random import PCG64 as pcg\n",
     "\n",
-    "#in actual sense , their full names are np.random.Generator and numpy.random"
+    "#in actual sense , their full names are np.random.Generator and numpy.random\n",
+    "# PCG stands for Permutation Congruential Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7771247050919741"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_RG=gen(pcg())\n",
+    "array_RG.normal(size=5)\n",
+    "#this generates a random number from the standard normal distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.57479817,  0.3238708 , -0.28155057,  1.24137429,  0.48784294],\n",
+       "       [-1.68593014, -1.42313121,  0.05619521, -1.24881889, -0.43331737],\n",
+       "       [ 3.05077891, -1.68086368,  0.95417287, -0.52915169,  1.44095272],\n",
+       "       [ 0.85641569, -0.08732679, -0.48354051,  0.1419406 ,  0.79778971],\n",
+       "       [-1.03845711,  0.8818048 , -0.06804738, -0.05203911,  0.76677836]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_RG=gen(pcg())\n",
+    "array_RG.normal(size=(5,5))\n",
+    "#The only problem with thi code is that every time we run this cell,  we will always get different output\n",
+    "#in that case we need to introduce seed=365 to the pcg method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.13640899,  0.09414431, -0.06300442,  1.05391641, -0.6866818 ],\n",
+       "       [-0.50922173, -0.7999526 ,  0.73041825,  0.08825439, -2.1177576 ],\n",
+       "       [ 0.65526774, -0.48095012, -0.5519114 , -0.58578662, -0.98257896],\n",
+       "       [ 1.12378166, -1.30984316, -0.04703774,  0.955272  ,  0.26071745],\n",
+       "       [-0.20023668, -1.50172484, -1.4929163 ,  0.96535084,  1.18694633]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_RG=gen(pcg(seed=365))\n",
+    "array_RG.normal(size=(5,5))\n",
+    "#sometimes we want to generate some random dataset to test our model \n",
+    "\n"
    ]
   },
   {
@@ -534,14 +551,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "With the above code , we will always get the same output. Hence we can "
+   ]
   },
   {
    "cell_type": "markdown",
